<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Fragment names and labels -->
    <string name="home">Home</string>
    <string name="app_name">GPS Texter</string>
    <string name="distance">Distance from home:</string>
    <string name="time_since_update">Time since update:</string>
    <string name="speed">Speed:</string>
    <string name="speed_unit">km/h</string>
    <string name="hour">h</string>
    <string name="zone">Zone:</string>
    <string name="stats_tab_name">Stats</string>
    <string name="map_tab_name">Map</string>
    <string name="history_tab_name">History</string>
    <string name="send_now">Send now</string>
    <string name="notification_text">Receiving location data.</string>

    <!-- Preferences -->
    <string name="sms_settings">SMS</string>
    <string name="enable_sms">Enable SMS</string>
    <string name="telephone_number">Telephone number</string>
    <string name="telephone_number_summary">The person who will receive the SMS</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="maximum_distance_summary">Send messages up to this limit</string>
    <string name="content_settings">SMS Content</string>
    <string name="include_speed">Include speed</string>
    <string name="include_speed_summary">Put speed info in the message</string>
    <string name="include_time">Include time</string>
    <string name="include_time_summary">Put time info in the message</string>
    <string name="include_location">Include location</string>
    <string name="include_location_summary">Include exact location</string>
    <string name="location_settings">Location</string>
    <string name="update_frequency">Update frequency</string>
    <string name="update_frequency_summary">Time [s] between location updates</string>
    <string name="no_number">This person doesn\'t have any associated number</string>

    <!-- Messages -->
    <string name="sent">Sent</string>
    <string name="delivered">Delivered</string>
    <string name="generic_failure">Impossible to send</string>
    <string name="no_service">No service</string>
    <string name="radio_off">No connection</string>
    <string name="not_delivered">Not delivered</string>
    <string name="tap_once_more_to_reset">Tap once more to reset</string>
    <string name="reset">Reset</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="app_name_settings">GPS Texter - Settings</string>
    <string name="tap_back_second_time">Tap Back second time to exit the application</string>
    <string name="please_wait">Please wait</string>

    <!-- Map preferences -->
    <string name="home_location">Home location</string>
    <string name="home_location_summary">Point to measure distance from</string>
    <string name="long_press">Long press to select home location</string>
    <string name="use_current_location">Use current location</string>

    <!-- Permissions -->
    <string name="perm_contacts_rationale">This app wants to display your contact list in order to let you pick a phone number the text messages will be sent to.\n\nIf you do not grant the permission, you still can type in the phone number manually.</string>

    <!-- Dialogs -->
    <string name="info_dismiss_button">Dismiss</string>
    <string name="info_settings_button">Settings</string>

</resources>
