<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_now_button"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:textSize="45sp"
                android:text="0 km"/>

            <TextView
                android:id="@+id/speed_label"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:textSize="24sp"
                android:text=""/>

            <TextView
                android:id="@+id/interval_label"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/time_since_update" />

            <TextView
                android:id="@+id/interval_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:textSize="24sp"
                android:text=""/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/send_now_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_now"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
